--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -2679,6 +2679,12 @@
 							<div class="cell">
 								<input type="text" name="attr_skill_misc" title="Macro table name: repeating_skills. Field name: skill_misc" />
 							</div>
+							<div class="cell label">
+								Reason for MOD (Modifier):
+							</div>
+							<div class="cell">
+								<input type="text" name="attr_skill_mod_notes" title="Macro table name: repeating_skills. Field name: skill_mod_notes" />
+							</div>
 						</div> <!-- .sheet-row -->
 
 						<div class="col-notebox">
