Update after release
Changed the links to img to the Roll20 folder
Change an autocalc field to a sheetworker

--- a/FACES (French)/FACES_HTML.html
+++ b/FACES (French)/FACES_HTML.html
@@ -18,7 +18,7 @@
         <button type="roll" name="roll_minisheet" title="%{selected ou nom du personnage|minisheet}" value="/w @{character_name} &{template:minisheet} {{name=@{character_name}}} {{value1=@{hp}}} {{value1_max=@{hp|max}}} {{value2=@{nrj}}} {{value2_max=@{nrj|max}}} {{buttons_name=Attributs}} {{buttons=[Force](~force}) [Agilité](~agilite}) [Caractère](~caractere}) [Esprit](~esprit}) [Sens](~sens})}} {{buttons2_name=Talents}} {{buttons2=@{talent_buttons}}} {{buttons3_name=Mêlée}} {{buttons3=@{melee_buttons}}} {{buttons4_name=Distance}} {{buttons4=@{distance_buttons}}}" style="font-family: Pictos; font-size: 20px; float:right">N</button>
     </div>
     <div class="flex logo-flex">
-        <img alt="logo" src="https://i.goopics.net/XZ9pa.png">
+        <img alt="logo" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/FACES%20(French)/Faces_logo.png">
     </div>
     <div class="flex info-flex">
         <div class="grid grid-tab-inputs">
@@ -61,7 +61,7 @@
             <span style="font-weight:bold; font-size: 25px; padding:5px">/</span>
             <input type="number" name="attr_hp_max" title="@{hp|max}">
             <span style="font-weight:bold; font-size: 20px; padding:5px">PV/2</span>
-            <input type="number" name="attr_wound" value="@{hp|max}/2" disabled="true">
+            <input type="number" name="attr_wound" value="0">
         </div>
         <!-- NRJ -->
         <div class="flex pc-flex" style="margin-bottom:5px">
@@ -512,6 +512,15 @@ const setAttributes = (update, silent) => {
         let newString = (oldString.includes(`${attr}`)) ? oldString.replace(`${attr},`, "") : `${oldString}${attr},`;
         return newString
     };
+
+// === UPDATE WOUND
+on("change:hp_max", function() {
+   getAttrs(["hp_max"], function(values) {
+      setAttrs({
+          wound: Math.floor(values.hp_max / 2)
+      });
+   });
+});
 
 // === REROLL TALENT ROW ID VALUE
 on("change:repeating_talents", function() {
