Pavillon Noir 2: adding a jolly-roger behind roll
Because, otherwise, it means playing a pirate game without a jolly roger
and that is just too sad...

--- a/Pavillon Noir 2/Pavillon Noir 2.html
+++ b/Pavillon Noir 2/Pavillon Noir 2.html
@@ -16,6 +16,36 @@
         <textarea name="attr_description"></textarea>
     </div>
 
+    <rolltemplate class="sheet-rolltemplate-simpletest">
+      <span style="color:black">{{Perso}}</span>
+      <table>
+        <tr>
+            <th><span style="color:black">{{NomDuJet}}</span></th>
+        </tr>
+	<tr/>
+	<tr/>
+        <tr>
+            <td><span style="color:black">Résultat: {{Résultat}}</span></td>
+        </tr>
+        {{#rollWasCrit() Résultat}}
+        <tr>
+           <td>Au moins un 10!</td>
+        </tr>
+        {{/rollWasCrit() Résultat}}
+        {{#rollWasFumble() Résultat}}
+        <tr>
+           <td>Au moins un 1!</td>
+        </tr>
+        {{/rollWasFumble() Résultat}}
+        {{#notes}}
+        <tr>
+            <td><span>Notes: </span>{{notes}}</td>
+        </tr>
+        {{/notes}}
+      </table>
+   </rolltemplate>
+
+
     <div class="attrib roue" style="width:49%;padding-top:10px;">
         <div>
             <p style="margin-top:0;"><button type="roll" class="roll" value="/em - Jet d'Adresse \n\n/roll 2d10<@{adresse}">Adresse</button><br><input type="number" name="attr_adresse" value="0"></p> <br>
@@ -25,7 +55,7 @@
             <p style="width:49%;"><button type="roll" class="roll" value="/em - Jet de Force \n\n/roll 2d10<@{force}">Force</button><br><input type="number" name="attr_force" value="0"></p>
         </div> <br>
         <div>
-            <p><button type="roll" class="roll" value="/em - Jet de Perception \n\n/roll 2d10<@{perception}">Perception</button><br><input type="number" name="attr_perception" value="0"></p>
+            <p><button type="roll" class="roll" value="&{template:simpletest} {{NomDuJet=Perception}} {{Perso=@{character_name}}} {{Résultat=[[2d10<@{perception}]]}}">Perception</button><input type="number" name="attr_perception" value="0"><br></p>
             <p><button type="roll" class="roll" value="/em - Jet de Pouvoir \n\n/roll 2d10<@{pouvoir}">Pouvoir</button><br><input type="number" name="attr_pouvoir" value="0"></p>
             <p><button type="roll" class="roll" value="/em - Jet de Résistance \n\n/roll 2d10<@{résistance}">Résistance</button><br><input type="number" name="attr_résistance" value="0"></p>
         </div> <br>
