[Ryuutama]: fix caps

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -2,7 +2,7 @@
 
 <html>
     <script type="text/worker">
-        on("change:injury CHANGE:condition", function() {
+        on("change:injury change:condition", function() {
             getAttrs(["condition", "injury"], function(values) {
                 setAttrs({
                     injured: parseInt(values.injury) > parseInt(values.condition) ? 2 : 0
