added momentum checks

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -155,31 +155,31 @@
                 <div class="sheet-stats">
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Edge" name="rollEdge"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{edge}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">EDGE</h3>
                         <input type="text" class="sheet-stats-input" name="attr_edge" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Iron" name="rollIron"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{iron}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">IRON</h3>
                         <input type="text" class="sheet-stats-input" name="attr_iron" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Heart" name="rollHeart"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name= Roll +heart}} {{action=[[1d6+@{heart}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{heart}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">HEART</h3>
                         <input type="text" class="sheet-stats-input" name="attr_heart" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Shadow" name="rollShadow"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{shadow}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">SHADOW</h3>
                         <input type="text" class="sheet-stats-input" name="attr_shadow" value="1">
                     </div>
                     <div class="sheet-stat">
                         <button type="roll" title="Roll +Wits" name="rollWits"
-                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+                            value="&{template:ironsworn} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+?{Modifier|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{wits}+?{Modifier|0}]]}} {{add=[[?{Modifier|0}]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+?{Modifier|0})-(@{momentum})]]}}"></button>
                         <h3 class="sheet-stats-title">WITS</h3>
                         <input type="text" class="sheet-stats-input" name="attr_wits" value="1">
                     </div>
@@ -3091,64 +3091,166 @@
 <rolltemplate class="sheet-rolltemplate-ironsworn">
     <table>
         {{#action}}
-        <tr>
-            <td colspan="2" class="sheet-subheader">{{header}}</td>
-        </tr>
-        <tr>
-            <th colspan="2">{{name}}</th>
-        </tr>
-        <tr>
-            <td><span>Action Die: </span></td>
-            <td><span>{{action}}</span></td>
-        </tr>
-        <tr>
-            <td><span>Challenge Dice: </span></td>
-            <td><span>{{challenge1}} {{challenge2}}</span></td>
-        </tr>
-        {{#rollGreater() action challenge1}}
-        {{#rollTotal() challenge1 challenge2}}
-        <!--CHALLENGE DIE MATCH-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
-        </tr>
-        {{/rollTotal() challenge1 challenge2}}
-        {{#^rollTotal() challenge1 challenge2}}
-        {{#rollGreater() action challenge2}}
-        <!--Strong Hit-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
-        </tr>
-        {{/rollGreater() action challenge2}}
-        {{#^rollGreater() action challenge2}}
-        <!--Weak Hit-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
-        </tr>
-        {{/^rollGreater() action challenge2}}
-        {{/^rollTotal() challenge1 challenge2}}
-        {{/rollGreater() action challenge1}}
-        {{#^rollGreater() action challenge1}}
-        {{#rollTotal() challenge1 challenge2}}
-        <!--CHALLENGE DIE MATCH-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
-        </tr>
-        {{/rollTotal() challenge1 challenge2}}
-        {{#^rollTotal() challenge1 challenge2}}
-        {{#rollGreater() action challenge2}}
-        <!--Weak Hit-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
-        </tr>
-        {{/rollGreater() action challenge2}}
-        {{#^rollGreater() action challenge2}}
-        <!--Miss-->
-        <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
-        </tr>
-        {{/^rollGreater() action challenge2}}
-        {{/^rollTotal() challenge1 challenge2}}
-        {{/^rollGreater() action challenge1}}
+            <tr>
+                <td colspan="2" class="sheet-subheader">{{header}}</td>
+            </tr>
+            <tr>
+                <th colspan="2">{{name}}</th>
+            </tr>
+            {{#rollTotal() action momentum_cancel}}
+                <tr>
+                    <td>Action Die:</td>
+                    <td>{{fake_roll}}</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Action die cancelled for matching negative momentum.</td>
+                </tr>
+                <tr>
+                    <td>Stat + Add:</td>
+                    <td>{{stat}} + {{add}}</td>
+                </tr>
+                <tr>
+                    <td>Action Score:</td>
+                    <td>{{modifiers}}</td>
+                </tr>
+                <tr>
+                    <td><span>Challenge Dice: </span></td>
+                    <td><span>{{challenge1}} {{challenge2}}</span></td>
+                </tr>
+                {{#rollGreater() modifiers challenge1}}
+                    {{#rollTotal() challenge1 challenge2}}
+                    <!--CHALLENGE DIE MATCH-->
+                    <tr>
+                        <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+                    </tr>
+                    {{/rollTotal() challenge1 challenge2}}
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() modifiers challenge2}}
+                        <!--Strong Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+                        </tr>
+                        {{/rollGreater() modifiers challenge2}}
+                        {{#^rollGreater() modifiers challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                        </tr>
+                        {{/^rollGreater() modifiers challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/rollGreater() modifiers challenge1}}
+                {{#^rollGreater() modifiers challenge1}}
+                    {{#rollTotal() challenge1 challenge2}}
+                    <!--CHALLENGE DIE MATCH-->
+                    <tr>
+                        <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+                    </tr>
+                    {{/rollTotal() challenge1 challenge2}}
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() modifiers challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                        </tr>
+                        {{/rollGreater() modifiers challenge2}}
+                        {{#^rollGreater() modifiers challenge2}}
+                        <!--Miss-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
+                        </tr>
+                        {{/^rollGreater() modifiers challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/^rollGreater() modifiers challenge1}}
+            {{/rollTotal() action momentum_cancel}}
+            {{#^rollTotal() action momentum_cancel}}
+                <tr>
+                    <td><span>Action Score: </span></td>
+                    <td><span>{{action}}</span></td>
+                </tr>
+                <tr>
+                    <td><span>Challenge Dice: </span></td>
+                    <td><span>{{challenge1}} {{challenge2}}</span></td>
+                </tr>
+                {{#rollGreater() action challenge1}}
+                    {{#rollTotal() challenge1 challenge2}}
+                    <!--CHALLENGE DIE MATCH-->
+                    <tr>
+                        <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+                    </tr>
+                    {{/rollTotal() challenge1 challenge2}}
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() action challenge2}}
+                        <!--Strong Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+                        </tr>
+                        {{/rollGreater() action challenge2}}
+                        {{#^rollGreater() action challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                        </tr>
+                        {{/^rollGreater() action challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/rollGreater() action challenge1}}
+                {{#^rollGreater() action challenge1}}
+                    {{#rollTotal() challenge1 challenge2}}
+                    <!--CHALLENGE DIE MATCH-->
+                    <tr>
+                        <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+                    </tr>
+                    {{/rollTotal() challenge1 challenge2}}
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() action challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                        </tr>
+                        {{/rollGreater() action challenge2}}
+                        {{#^rollGreater() action challenge2}}
+                        <!--Miss-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
+                        </tr>
+                        {{/^rollGreater() action challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/^rollGreater() action challenge1}}
+                
+                {{#rollGreater() momentum challenge1}}
+                    <tr>
+                        <td>Momentum:</td>
+                        <td>{{momentum}}</td>
+                    </tr>
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() momentum challenge2}}
+                        <!--Strong Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Momentum Burn: Strong Hit</td>
+                        </tr>
+                        {{/rollGreater() momentum challenge2}}
+                        {{#^rollGreater() momentum challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Momentum Burn: Weak Hit</td>
+                        </tr>
+                        {{/^rollGreater() momentum challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/rollGreater() momentum challenge1}}
+                {{#^rollGreater() momentum challenge1}}
+                    <tr>
+                        <td>Momentum:</td>
+                        <td>{{momentum}}</td>
+                    </tr>
+                    {{#^rollTotal() challenge1 challenge2}}
+                        {{#rollGreater() momentum challenge2}}
+                        <!--Weak Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Momentum Burn: Weak Hit</td>
+                        </tr>
+                        {{/rollGreater() momentum challenge2}}
+                    {{/^rollTotal() challenge1 challenge2}}
+                {{/^rollGreater() momentum challenge1}}
+            {{/^rollTotal() action momentum_cancel}}
         {{/action}}
         {{#vow}}
         <tr>
