added fixed momentum

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -3103,7 +3103,7 @@
                     <td>{{fake_roll}}</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Action die cancelled for matching negative momentum.</td>
+                    <td colspan="2" class="sheet-subfooter sheet-alert ">Action die cancelled for matching negative momentum.</td>
                 </tr>
                 <tr>
                     <td>Stat + Add:</td>
@@ -3121,20 +3121,20 @@
                     {{#rollTotal() challenge1 challenge2}}
                     <!--CHALLENGE DIE MATCH-->
                     <tr>
-                        <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+                        <td colspan="2" class="sheet-subfooter sheet-opportunity">Opportunity</td>
                     </tr>
                     {{/rollTotal() challenge1 challenge2}}
                     {{#^rollTotal() challenge1 challenge2}}
                         {{#rollGreater() modifiers challenge2}}
                         <!--Strong Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Strong Hit</td>
                         </tr>
                         {{/rollGreater() modifiers challenge2}}
                         {{#^rollGreater() modifiers challenge2}}
                         <!--Weak Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
                         </tr>
                         {{/^rollGreater() modifiers challenge2}}
                     {{/^rollTotal() challenge1 challenge2}}
@@ -3143,20 +3143,20 @@
                     {{#rollTotal() challenge1 challenge2}}
                     <!--CHALLENGE DIE MATCH-->
                     <tr>
-                        <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+                        <td colspan="2" class="sheet-subfooter sheet-complication">Complication</td>
                     </tr>
                     {{/rollTotal() challenge1 challenge2}}
                     {{#^rollTotal() challenge1 challenge2}}
                         {{#rollGreater() modifiers challenge2}}
                         <!--Weak Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
                         </tr>
                         {{/rollGreater() modifiers challenge2}}
                         {{#^rollGreater() modifiers challenge2}}
                         <!--Miss-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
+                            <td colspan="2" class="sheet-subfooter sheet-miss">Miss</td>
                         </tr>
                         {{/^rollGreater() modifiers challenge2}}
                     {{/^rollTotal() challenge1 challenge2}}
@@ -3175,21 +3175,31 @@
                     {{#rollTotal() challenge1 challenge2}}
                     <!--CHALLENGE DIE MATCH-->
                     <tr>
-                        <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+                        <td colspan="2" class="sheet-subfooter sheet-opportunity">Opportunity</td>
                     </tr>
                     {{/rollTotal() challenge1 challenge2}}
                     {{#^rollTotal() challenge1 challenge2}}
                         {{#rollGreater() action challenge2}}
                         <!--Strong Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Strong Hit</td>
                         </tr>
                         {{/rollGreater() action challenge2}}
                         {{#^rollGreater() action challenge2}}
                         <!--Weak Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
                         </tr>
+                            {{#rollGreater() momentum challenge2}}
+                            <tr>
+                                <td>Momentum:</td>
+                                <td>{{momentum}}</td>
+                            </tr>
+                            <!--Strong Hit-->
+                            <tr>
+                                <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+                            </tr>
+                            {{/rollGreater() momentum challenge2}}
                         {{/^rollGreater() action challenge2}}
                     {{/^rollTotal() challenge1 challenge2}}
                 {{/rollGreater() action challenge1}}
@@ -3197,59 +3207,80 @@
                     {{#rollTotal() challenge1 challenge2}}
                     <!--CHALLENGE DIE MATCH-->
                     <tr>
-                        <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+                        <td colspan="2" class="sheet-subfooter sheet-complication">Complication</td>
                     </tr>
+                        {{#rollGreater() momentum challenge1}}
+                        <tr>
+                            <td>Momentum:</td>
+                            <td>{{momentum}}</td>
+                        </tr>
+                        <!--Strong Hit-->
+                        <tr>
+                            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+                        </tr>
+                        {{/rollGreater() momentum challenge1}}
                     {{/rollTotal() challenge1 challenge2}}
                     {{#^rollTotal() challenge1 challenge2}}
                         {{#rollGreater() action challenge2}}
                         <!--Weak Hit-->
                         <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+                            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
                         </tr>
+                            {{#rollGreater() momentum challenge1}}
+                                {{#rollGreater() momentum challenge2}}
+                                <tr>
+                                    <td>Momentum:</td>
+                                    <td>{{momentum}}</td>
+                                </tr>
+                                <!--Strong Hit-->
+                                <tr>
+                                    <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+                                </tr>
+                                {{/rollGreater() momentum challenge2}}
+                            {{/rollGreater() momentum challenge1}}
                         {{/rollGreater() action challenge2}}
                         {{#^rollGreater() action challenge2}}
-                        <!--Miss-->
-                        <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
-                        </tr>
+                            <!--Miss-->
+                            <tr>
+                                <td colspan="2" class="sheet-subfooter sheet-miss">Miss</td>
+                            </tr>
+                            {{#rollGreater() momentum challenge1}}
+                                {{#rollGreater() momentum challenge2}}
+                                    <tr>
+                                        <td>Momentum:</td>
+                                        <td>{{momentum}}</td>
+                                    </tr>
+                                    <!--Strong Hit-->
+                                    <tr>
+                                        <td colspan="2" class="sheet-subfooter sheet-strong-hit">Momentum Burn: Strong Hit</td>
+                                    </tr>
+                                {{/rollGreater() momentum challenge2}}
+                                {{#^rollGreater() momentum challenge2}}
+                                <tr>
+                                    <td>Momentum:</td>
+                                    <td>{{momentum}}</td>
+                                </tr>
+                                <!--Weak Hit-->
+                                <tr>
+                                    <td colspan="2" class="sheet-subfooter sheet-weak-hit">Momentum Burn: Weak Hit</td>
+                                </tr>
+                                {{/^rollGreater() momentum challenge2}}
+                            {{/rollGreater() momentum challenge1}}
+                            {{#^rollGreater() momentum challenge1}}
+                                {{#rollGreater() momentum challenge2}}
+                                <tr>
+                                    <td>Momentum:</td>
+                                    <td>{{momentum}}</td>
+                                </tr>
+                                <!--Weak Hit-->
+                                <tr>
+                                    <td colspan="2" class="sheet-subfooter sheet-weak-hit">Momentum Burn: Weak Hit</td>
+                                </tr>
+                                {{/rollGreater() momentum challenge2}}
+                            {{/^rollGreater() momentum challenge1}}
                         {{/^rollGreater() action challenge2}}
                     {{/^rollTotal() challenge1 challenge2}}
                 {{/^rollGreater() action challenge1}}
-                
-                {{#rollGreater() momentum challenge1}}
-                    <tr>
-                        <td>Momentum:</td>
-                        <td>{{momentum}}</td>
-                    </tr>
-                    {{#^rollTotal() challenge1 challenge2}}
-                        {{#rollGreater() momentum challenge2}}
-                        <!--Strong Hit-->
-                        <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Momentum Burn: Strong Hit</td>
-                        </tr>
-                        {{/rollGreater() momentum challenge2}}
-                        {{#^rollGreater() momentum challenge2}}
-                        <!--Weak Hit-->
-                        <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Momentum Burn: Weak Hit</td>
-                        </tr>
-                        {{/^rollGreater() momentum challenge2}}
-                    {{/^rollTotal() challenge1 challenge2}}
-                {{/rollGreater() momentum challenge1}}
-                {{#^rollGreater() momentum challenge1}}
-                    <tr>
-                        <td>Momentum:</td>
-                        <td>{{momentum}}</td>
-                    </tr>
-                    {{#^rollTotal() challenge1 challenge2}}
-                        {{#rollGreater() momentum challenge2}}
-                        <!--Weak Hit-->
-                        <tr>
-                            <td colspan="2" class="sheet-subfooter" style="color:gold;">Momentum Burn: Weak Hit</td>
-                        </tr>
-                        {{/rollGreater() momentum challenge2}}
-                    {{/^rollTotal() challenge1 challenge2}}
-                {{/^rollGreater() momentum challenge1}}
             {{/^rollTotal() action momentum_cancel}}
         {{/action}}
         {{#vow}}
@@ -3271,20 +3302,20 @@
         {{#rollTotal() challenge1 challenge2}}
         <!--CHALLENGE DIE MATCH-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">Opportunity</td>
         </tr>
         {{/rollTotal() challenge1 challenge2}}
         {{#^rollTotal() challenge1 challenge2}}
         {{#rollGreater() vow challenge2}}
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Strong Hit</td>
         </tr>
         {{/rollGreater() vow challenge2}}
         {{#^rollGreater() vow challenge2}}
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
         </tr>
         {{/^rollGreater() vow challenge2}}
         {{/^rollTotal() challenge1 challenge2}}
@@ -3293,20 +3324,20 @@
         {{#rollTotal() challenge1 challenge2}}
         <!--CHALLENGE DIE MATCH-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+            <td colspan="2" class="sheet-subfooter sheet-complication">Complication</td>
         </tr>
         {{/rollTotal() challenge1 challenge2}}
         {{#^rollTotal() challenge1 challenge2}}
         {{#rollGreater() vow challenge2}}
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
         </tr>
         {{/rollGreater() vow challenge2}}
         {{#^rollGreater() vow challenge2}}
         <!--Miss-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
+            <td colspan="2" class="sheet-subfooter sheet-miss">Miss</td>
         </tr>
         {{/^rollGreater() vow challenge2}}
         {{/^rollTotal() challenge1 challenge2}}
@@ -3331,20 +3362,20 @@
         {{#rollTotal() challenge1 challenge2}}
         <!--CHALLENGE DIE MATCH-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:green;">Opportunity</td>
+            <td colspan="2" class="sheet-subfooter sheet-opportunity">Opportunity</td>
         </tr>
         {{/rollTotal() challenge1 challenge2}}
         {{#^rollTotal() challenge1 challenge2}}
         {{#rollGreater() progress challenge2}}
         <!--Strong Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:darkgreen;">Strong Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-strong-hit">Strong Hit</td>
         </tr>
         {{/rollGreater() progress challenge2}}
         {{#^rollGreater() progress challenge2}}
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
         </tr>
         {{/^rollGreater() progress challenge2}}
         {{/^rollTotal() challenge1 challenge2}}
@@ -3353,20 +3384,20 @@
         {{#rollTotal() challenge1 challenge2}}
         <!--CHALLENGE DIE MATCH-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:red;">Complication</td>
+            <td colspan="2" class="sheet-subfooter sheet-complication">Complication</td>
         </tr>
         {{/rollTotal() challenge1 challenge2}}
         {{#^rollTotal() challenge1 challenge2}}
         {{#rollGreater() progress challenge2}}
         <!--Weak Hit-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:gold;">Weak Hit</td>
+            <td colspan="2" class="sheet-subfooter sheet-weak-hit">Weak Hit</td>
         </tr>
         {{/rollGreater() progress challenge2}}
         {{#^rollGreater() progress challenge2}}
         <!--Miss-->
         <tr>
-            <td colspan="2" class="sheet-subfooter" style="color:firebrick;">Miss</td>
+            <td colspan="2" class="sheet-subfooter sheet-miss">Miss</td>
         </tr>
         {{/^rollGreater() progress challenge2}}
         {{/^rollTotal() challenge1 challenge2}}
