added orcacles page

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -53,6 +53,9 @@
 <input type="radio" class="sheet-pages sheet-page2 sheet-hidden" id="page2" name="attr_pagenumber" title="Page 2" value="2" />
 <label class="sheet-page-label" for="page2">Progress</label>
 
+<input type="radio" class="sheet-pages sheet-page4 sheet-hidden" id="page4" name="attr_pagenumber" title="Page 4" value="4" />
+<label class="sheet-page-label" for="page4">Oracles</label>
+
 <div class="page1tab">
     <hr>
     <table>
@@ -925,6 +928,9 @@
             </div>
         </div>
     </fieldset>
+</div>
+<div class="page4tab"> 
+    <hr>
 </div>
 <hr>
 <table>
