--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -931,6 +931,9 @@
 </div>
 <div class="page4tab"> 
     <hr>
+    <div>
+        Action: <button type="roll" title="Conclude your progress" name="rollprogress1" value="&{template:ironsworn} {{header=@{character_name} Conclude Your Progress}} {{progressname=@{name}}} {{progress=[[@{progress-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[1d10]]}}"></button>
+    </div>
 </div>
 <hr>
 <table>
