--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -724,9 +724,9 @@
                             </tr>
                             <tr>
                                 <td width="10%"><input type="checkbox" name="attr_debilMarked"><span></span></td>
-                                <td width="40%"><h5>Marked</h5></td>
+                                <td width="40%"><h5>Cursed</h5></td>
                                 <td width="10%"><input type="checkbox" name="attr_debilHaunted"><span></span></td>
-                                <td width="40%"><h5>Haunted</h5></td>
+                                <td width="40%"><h5>Tormented</h5></td>
                             </tr>
                             <tr>
                                 <td colspan="4"><h4 class="sheet-heading-left">BANES</h4></td>
